fixed issue with overflow on html page

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,8 @@
+html,body
+{
+    overflow-x: hidden; 
+}
+
 .fab {
     font-size: 80px;
 }
@@ -27,7 +32,7 @@
 }
 
 #about-content {
-    background-color: rgb(238, 251, 255);
+    background-color: rgb(243, 243, 243);
 }
 
 #portfolio-content {
